syntax = "proto3";

package cline;
option java_package = "bot.cline.proto";
option java_multiple_files = true;
option go_package = "sandboxclient/genproto/ui";

import "common.proto";

// UiService provides methods for managing UI interactions
service UiService {
  // Scrolls to a specific settings section in the settings view
  rpc scrollToSettings(StringRequest) returns (Empty);
  
  // Marks the current announcement as shown and returns whether an announcement should still be shown
  rpc onDidShowAnnouncement(EmptyRequest) returns (Boolean);
}
